@@ -110,6 +110,7 @@ public:
         uint non_complex_pen : 1;           // can use rasterizer, rather than stroker
         uint antialiased : 1;
         uint bilinear : 1;
+        uint legacy_rounding : 1;
         uint fast_text : 1;
         uint int_xform : 1;
         uint tx_noshear : 1;
@@ -245,6 +246,8 @@ private:
     void drawBitmap(const QPointF &pos, const QImage &image, QSpanData *fill);
 
     bool setClipRectInDeviceCoords(const QRect &r, Qt::ClipOperation op);
+
+    QRect toNormalizedFillRect(const QRectF &rect);
 
     inline void ensureBrush(const QBrush &brush) {
         if (!qbrush_fast_equals(state()->lastBrush, brush) || (brush.style() != Qt::NoBrush && state()->fillFlags))
